Simplify simple algorithm